--- a/share/lang/ko.json
+++ b/share/lang/ko.json
@@ -242,7 +242,8 @@
       "last10": ["10초", "최근 10초 DPS"],
       "last30": ["30초", "최근 30초 DPS"],
       "last60": ["1분", "최근 1분 DPS"],
-      "last180": ["3분", "최근 3분 DPS (베타)"]
+      "last180": ["3분", "최근 3분 DPS (베타)"],
+      "percentile": ["Pct", "백분위 수"]
     },
     "tank": {
       "_": "탱",
