--- a/share/lang/ja.json
+++ b/share/lang/ja.json
@@ -242,7 +242,8 @@
       "last10": ["10s", "直近10秒DPS"],
       "last30": ["30s", "直近30秒DPS"],
       "last60": ["1分", "直近1分DPS"],
-      "last180": ["3分", "直近3分DPS (β)"]
+      "last180": ["3分", "直近3分DPS (β)"],
+      "percentile": ["Pct", "パーセンテージ"]
     },
     "tank": {
       "_": "Tank",
